gccida/c2/insns_match_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1332:4: error: expected ';' after expression
rtx v24; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1332:5: error: use of undeclared identifier 'v24'
rtx v24; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1333:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1333:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1335:4: error: expected ';' after expression
rtx v27; // [rsp+10h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1335:5: error: use of undeclared identifier 'v27'
rtx v27; // [rsp+10h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1340:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)i1[2]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1341:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = (  struct rtx_def *)i2[2]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1343:38: error: expected expression
|| v3 == 34 && !rtx_equal_p( *( rtx *)&i1[4], *( rtx *)&i2[4]) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1343:55: error: expected expression
|| v3 == 34 && !rtx_equal_p( *( rtx *)&i1[4], *( rtx *)&i2[4]) ) 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1349:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)i1[3].fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1365:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)i2[3].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1413:1: error: use of undeclared identifier 'v24'
v24 = ( rtx)i1[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1414:17: error: use of undeclared identifier 'v24'
if ( *( _WORD *)v24 != 47 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1415:25: error: use of undeclared identifier 'v24'
v24 = single_set_2( i1, v24); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1415:1: error: use of undeclared identifier 'v24'
v24 = single_set_2( i1, v24); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1419:1: error: use of undeclared identifier 'v24'
v24 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1423:1: error: use of undeclared identifier 'v25'
v25 = ( rtx)i2[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/cfgcleanup.c:1424:17: error: use of undeclared identifier 'v25'
if ( *( _WORD *)v25 != 47 ) 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insns_match_p/src/obj/cfgcleanup.o] Error 1
